--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Faster-OJ",
-  "version": "(demo)1.0.1",
+  "version": "1.0.1",
   "description": "通过 WebSocket 接收包含 URL 和代码的任务，实现各大 OJ 平台的自动化代码提交。",
   "author": "XiaoCRQ",
   "homepage_url": "https://github.com/XiaoCRQ/Faster-OJ",
-  "license": "GPL-3.0",
   "browser_specific_settings": {
     "gecko": {
       "id": "Faster-OJ@xiaocrq",
-      "strict_min_version": "109.0"
+      "strict_min_version": "112.0",
+      "data_collection_permissions": {
+        "required": ["none"],
+        "optional": []
+      }
     }
   },
   "permissions": [
     "tabs",
     "scripting",
     "storage",
-    "alarms" 
+    "alarms"
   ],
   "host_permissions": [
     "*://*.luogu.com.cn/*",
@@ -24,9 +27,7 @@
     "*://*.nowcoder.com/*"
   ],
   "background": {
-    "scripts": ["background.js"] ,
-    "service_worker": "background.js",
-    "type": "module"
+    "scripts": ["background.js"]
   },
   "options_ui": {
     "page": "options.html",
